--- a/bulk_sales.html
+++ b/bulk_sales.html
@@ -11,10 +11,10 @@
 
   <main id="content-container">
   <div style="padding: 2rem 3vw;">
-  <section class="grid" style="display: grid; grid-template-columns: repeat(5, 1fr); gap: 2rem; justify-items: stretch; align-items: start; margin: 0 0 2rem 0; padding: 0;">
+  <section class="grid" style="display: grid; grid-template-columns: repeat(5, 1fr); gap: 2rem 2rem; justify-items: stretch; align-items: start; margin: 0 0 2rem 0; padding: 0;">
   
         <!-- ARC -->
-  <div class="card location-block" data-location="ARC" style="width: 100%; min-width: 0;">
+  <div class="card location-block" data-location="ARC">
           <h2>ARC</h2>
           <ul class="bulk-list" data-location-list="ARC">
             <li class="rarity-r" data-img="hornet_driver.png"><span class="rarity-text"><span data-img="hornet_driver.png"></span></span>: x3 $6,000</li>
@@ -44,7 +44,7 @@
         </div>
 
         <!-- Commercial -->
-  <div class="card location-block" data-location="Commercial" style="width: 100%; min-width: 0;">
+  <div class="card location-block" data-location="Commercial">
           <h2>Commercial</h2>
           <ul class="bulk-list" data-location-list="Commercial">
             <li class="rarity-c" data-img="breathtaking_snow_globe.png"><span class="rarity-text"><span data-img="breathtaking_snow_globe.png"></span></span>: x1 $7,000</li>
@@ -66,7 +66,7 @@
         </div>
 
         <!-- Medical -->
-  <div class="card location-block" data-location="Medical" style="width: 100%; min-width: 0;">
+  <div class="card location-block" data-location="Medical">
           <h2>Medical</h2>
           <ul class="bulk-list" data-location-list="Medical">
             <li class="rarity-c" data-img="fabric.png"><span class="rarity-text"><span data-img="fabric.png"></span></span>: x50 $2,500</li>
@@ -77,7 +77,7 @@
         </div>
 
         <!-- Residential -->
-  <div class="card location-block" data-location="Residential" style="width: 100%; min-width: 0;">
+  <div class="card location-block" data-location="Residential">
           <h2>Residential</h2>
           <ul class="bulk-list" data-location-list="Residential">
             <li class="rarity-c" data-img="lances_mixtape_5th_edition.png"><span class="rarity-text"><span data-img="lances_mixtape_5th_edition.png"></span></span>: x3 $30,000</li>
@@ -104,7 +104,7 @@
         </div>
 
         <!-- Mechanical -->
-  <div class="card location-block" data-location="Mechanical" style="width: 100%; min-width: 0;">
+  <div class="card location-block" data-location="Mechanical">
           <h2>Mechanical</h2>
           <ul class="bulk-list" data-location-list="Mechanical">
             <li class="rarity-u" data-img="mechanical_components.png"><span class="rarity-text"><span data-img="mechanical_components.png"></span></span>: x10 $6,400</li>
@@ -118,7 +118,7 @@
         </div>
 
         <!-- Industrial -->
-  <div class="card location-block" data-location="Industrial" style="width: 100%; min-width: 0;">
+  <div class="card location-block" data-location="Industrial">
           <h2>Industrial</h2>
           <ul class="bulk-list" data-location-list="Industrial">
             <li class="rarity-u" data-img="steel_spring.png"><span class="rarity-text"><span data-img="steel_spring.png"></span></span>: x15 $4,500</li>
@@ -129,7 +129,7 @@
         </div>
 
         <!-- Electrical -->
-  <div class="card location-block" data-location="Electrical" style="width: 100%; min-width: 0;">
+  <div class="card location-block" data-location="Electrical">
           <h2>Electrical</h2>
           <ul class="bulk-list" data-location-list="Electrical">
             <li class="rarity-u" data-img="electrical_components.png"><span class="rarity-text"><span data-img="electrical_components.png"></span></span>: x10 $6,400</li>
@@ -142,7 +142,7 @@
         </div>
 
         <!-- Technological -->
-  <div class="card location-block" data-location="Technological" style="width: 100%; min-width: 0;">
+  <div class="card location-block" data-location="Technological">
           <h2>Technological</h2>
           <ul class="bulk-list" data-location-list="Technological">
             <li class="rarity-u" data-img="battery.png"><span class="rarity-text"><span data-img="battery.png"></span></span>: x15 $3,750</li>
@@ -154,7 +154,7 @@
         </div>
 
         <!-- Security -->
-  <div class="card location-block" data-location="Security" style="width: 100%; min-width: 0;">
+  <div class="card location-block" data-location="Security">
           <h2>Security</h2>
           <ul class="bulk-list" data-location-list="Security">
             <li class="rarity-r" data-img="mod_components.png"><span class="rarity-text"><span data-img="mod_components.png"></span></span>: x5 $8,750</li>
@@ -167,7 +167,7 @@
         </div>
 
         <!-- Raider -->
-  <div class="card location-block" data-location="Raider" style="width: 100%; min-width: 0;">
+  <div class="card location-block" data-location="Raider">
           <h2>Raider</h2>
           <ul class="bulk-list" data-location-list="Raider">
             <li class="rarity-u" data-img="simple_gun_parts.png"><span class="rarity-text"><span data-img="simple_gun_parts.png"></span></span>: x10 $3,300</li>
@@ -175,7 +175,7 @@
         </div>
 
         <!-- Exodus -->
-  <div class="card location-block" data-location="Exodus" style="width: 100%; min-width: 0;">
+  <div class="card location-block" data-location="Exodus">
           <h2>Exodus</h2>
           <ul class="bulk-list" data-location-list="Exodus">
             <li class="rarity-e" data-img="exodus_modules.png"><span class="rarity-text"><span data-img="exodus_modules.png"></span></span>: x3 $8,250</li>
@@ -187,7 +187,7 @@
         </div>
 
         <!-- Old World -->
-  <div class="card location-block" data-location="Old World" style="width: 100%; min-width: 0;">
+  <div class="card location-block" data-location="Old World">
           <h2>Old World</h2>
           <ul class="bulk-list" data-location-list="Old World">
             <li class="rarity-c" data-img="music_box.png"><span class="rarity-text"><span data-img="music_box.png"></span></span>: x3 $15,000</li>
@@ -199,7 +199,7 @@
         </div>
 
         <!-- Nature -->
-  <div class="card location-block" data-location="Nature" style="width: 100%; min-width: 0;">
+  <div class="card location-block" data-location="Nature">
           <h2>Nature</h2>
           <ul class="bulk-list" data-location-list="Nature">
             <li class="rarity-r" data-img="moss.png"><span class="rarity-text"><span data-img="moss.png"></span></span>: x10 $5,000</li>
